--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   ffmpeg_kit_flutter_full_gpl: ^6.0.3
   mobile_scanner: ^6.0.6
   google_fonts: ^6.2.1
+  video_player: ^2.9.3
+  path_provider: ^2.1.5
+  http_server: ^1.0.0
 
 
 dev_dependencies:
