--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,6 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation("com.facebook.android:facebook-android-sdk:18.0.2")
+}
