--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   ffmpeg_kit_flutter_full_gpl: ^6.0.3
   mobile_scanner: ^6.0.6
   google_fonts: ^6.2.1
+  flutter_facebook_auth: ^7.1.1
+  http: ^1.3.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
