--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,8 +5,7 @@ plugins {
 }
 
 android {
-    namespace = "vn.vndc.vnvar_livestream"
-//    namespace = "com.example.vnvar_flutter"
+    namespace = "vn.vndc.vnvar_livestream3"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -20,12 +19,12 @@ android {
     }
 
     defaultConfig {
-//        applicationId = "com.example.vnvar_flutter"
-        applicationId = "vn.vndc.vnvar_livestream"
+        applicationId = "vn.vndc.vnvar_livestream3"
         minSdkVersion 24
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -39,23 +38,22 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig = signingConfigs.debug
             signingConfig = signingConfigs.getByName("release")
         }
     }
+
     packagingOptions {
-        pickFirst 'lib/arm64-v8a/libc++_shared.so'   // Kiến trúc 64-bit ARM
-        pickFirst 'lib/armeabi-v7a/libc++_shared.so' // Kiến trúc 32-bit ARM
-        pickFirst 'lib/x86/libc++_shared.so'         // Kiến trúc x86 (nếu cần)
-        pickFirst 'lib/x86_64/libc++_shared.so'      // Kiến trúc x86_64 (nếu cần)
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
     }
 }
 
 flutter {
     source = "../.."
 }
+
 dependencies {
     implementation("com.facebook.android:facebook-android-sdk:18.0.2")
 }
