--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  google_sign_in: ^6.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
