--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace = "vn.vndc.vnvar_livestream3"
+    namespace = "vn.vndc.vnvar_livestream"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -19,7 +19,7 @@ android {
     }
 
     defaultConfig {
-        applicationId = "vn.vndc.vnvar_livestream3"
+        applicationId = "vn.vndc.vnvar_livestream"
         minSdkVersion 24
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
