--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ^3.6.2
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.5.2
   google_sign_in: ^6.3.0
   intl: ^0.20.2
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
