--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,5 +1,5 @@
 # Ignore Google Services JSON files
-google-services-ggplay.json
+app/google-services.json
 google-services.json
 google-services-debug.json
 
