--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+3
+version: 1.0.0+6
 
 environment:
   sdk: ^3.6.2
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   permission_handler: ^11.4.0
   ffmpeg_kit_flutter_full_gpl: ^6.0.3
@@ -23,6 +22,7 @@ dependencies:
   google_sign_in: ^6.3.0
   intl: ^0.20.2
   flutter_cache_manager: ^3.4.1
+  flutter_sound: ^9.26.0
 
 dev_dependencies:
   flutter_test:
