--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   intl: ^0.20.2
   flutter_cache_manager: ^3.4.1
   flutter_sound: ^9.26.0
+  ffmpeg_kit_flutter_new: ^1.4.1
+  ffmpeg_kit_flutter_android: ^1.1.3
 
 dev_dependencies:
   flutter_test:
