update ui setting

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,4 @@
+//D:\VNDC\VNVAR Livestream\MobileApp\Android_BuildOnWindows\android\app\build.gradle
 plugins {
     id "com.android.application"
     id "kotlin-android"
